--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,26 @@
-body{
-    background: scroll;
-    background-image: url(./../img/food\ bg.jpg);
+body {
+
+    background: url(./../img/food\ bg.jpg);
+
+
+
+}
+
+.nav-bar {
+    display: flex;
+    align-items: center;
+    background-color: antiquewhite;
+    border-radius: 20px;
+    padding: 10px;
     
+}
+
+.home {
+    margin: 10px;
+    
+}
+
+a{
+    text-decoration: none;
+
 }
